Tue Jan 12 02:10:48 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>

        * include/makeinclude/platform_macosx_iphone.GNU:

          crt1.10.6.o is missing under MacOSX 10.6 for iPhone Simulator.
          Fallback to 10.5 until apple provides the missing crt1.10.6.o

Sat Jan  9 00:42:55 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>

        * ace/config-macosx-iphone.h:

          added "#define ACE_SIZEOF_LONG_DOUBLE 8" since this is the size
          of long double on my iPhone 3GS. The value of long double in the
          simulator is probably different. We need to adjust this once
          we verify that the simulator value is different than the
          hardware's value.

Wed Jan  6 05:25:26 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>

        * include/makeinclude/platform_macosx_iphone.GNU:

          When building an executable for the iPhone Hardware (not simulator)
          go ahead and automatically codesign the executable so it can be
          deployed on the hardware. Note that this is a temporary hack until
          I can figure the proper way to do this.

Wed Jan  6 04:28:23 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>

        * include/makeinclude/platform_macosx_iphone.GNU:

          Minor enhancement.

Mon Jan  4 20:09:39 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao.spec
          Also dump lsb_release info

Fri Jan  1 03:09:45 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * Happy New Year everyone!!!

Thu Dec 31 20:54:51 UTC 2009  Steve Huston  <shuston@riverace.com>

        * ace/High_Res_Timer.cpp (get_cpuinfo): Don't use a CPU MHz value 0.
          I got a customer report with a real cpuinfo file showing 0.

Thu Dec 31 17:46:10 UTC 2009  Steve Huston  <shuston@riverace.com>

        * bin/MakeProjectCreator/config/ace_fl.mpb: Rather than add
          PLATFORM_GL_LDFLAGS twice, one should be PLATFORM_X11_LDFLAGS.
          Thanks to Aaron Scamehorn for catching this.
