@@ -1,11 +1,0 @@
-// $Id$
-#ifndef ACE_CONFIG_MACOSX_IPHONE_H
-#define ACE_CONFIG_MACOSX_IPHONE_H
-
-#define ACE_SIZEOF_LONG_DOUBLE 8
-
-#include "ace/config-macosx-snowleopard.h"
-
-
-#endif ACE_CONFIG_MACOSX_IPHONE_H
-
