@@ -1,3 +1,14 @@
+Tue Jan 12 04:12:41 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>
+
+        * ace/config-macosx-iphone-hardware.h:
+        * ace/config-macosx-iphone-simulator.h:
+
+          Split the below file to the two files listed above.
+
+        * ace/config-macosx-iphone.h:
+
+          Removed this file.
+
 Tue Jan 12 02:10:48 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>
 
         * include/makeinclude/platform_macosx_iphone.GNU:
